--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Agenda
+application.vendor=pi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,20 +25,15 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Contrato.jar
+dist.jar=${dist.dir}/Agenda.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
-file.reference.jgoodies-common-1.2.0.jar=src/Jcalendar/lib/jgoodies-common-1.2.0.jar
-file.reference.jgoodies-looks-2.4.1.jar=src/Jcalendar/lib/jgoodies-looks-2.4.1.jar
-file.reference.junit-4.6.jar=src/Jcalendar/lib/junit-4.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jgoodies-common-1.2.0.jar}:\
-    ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${file.reference.junit-4.6.jar}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -63,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=agendar.citas.AgendarCitas
+main.class=agendar.citas.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
